Route /Reservations/Monthly was renamed to /Reservations

--- a/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbar-collapser">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = string.Empty }, null)</li>
-                    <li>@Html.ActionLink("Reservations", "Monthly", "Reservations", new { area = string.Empty }, null)</li>
+                    <li>@Html.ActionLink("Reservations", "Index", "Reservations", new { area = string.Empty }, null)</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
