Added basic admin table which shows all reservations

--- a/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - NbuReservationSystem</title>
     @*TODO: fix this...!!*@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    @*<link rel="stylesheet" type="text/css" href="~/Content/DataTables/media/css/dataTables.bootstrap.css">*@
     @Styles.Render("~/Content/css")
 </head>
 <body>
@@ -55,6 +56,10 @@
     @Scripts.Render("~/bundles/bootstrap-dp")
     @*TODO: fix this...!!*@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.43/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/DataTables/media/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/DataTables/media/js/dataTables.bootstrap.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
+@* TODO: remove cdn / hard-codded js/css files! *@
