--- a/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,16 +1,13 @@
-﻿@using Microsoft.AspNet.Identity
-
-@*TODO: this page also needs localization!*@
+﻿@*TODO: this page also needs localization!*@
 
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", new { area = string.Empty }, FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
     @Html.AntiForgeryToken()
-
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Change password", "ChangePassword", "Manage", routeValues: new { area = string.Empty }, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
