--- a/Web/NbuReservationSystem.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,17 @@
-﻿@{
-    ViewBag.Title = "Reset password confirmation";
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
+@{
+    ViewBag.Title = AccountLabels.SuccessfulPasswordChange;
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-28">
+            <h1>@ViewBag.Title</h1>
+
+            <hr/>
+            <p>
+                @AccountLabels.SuccessfulPasswordChange. @Html.ActionLink(AccountLabels.SuccessfulPasswordChangeNextStep, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+            </p>
+        </div>
+    </div>
 </div>
