--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -148,15 +148,15 @@ header.carousel .fill {
     font-size: 14px;
 }
 
-#new-reservation-form {
+.custom-form {
     padding: 15px;
 }
 
-#new-reservation-form .row {
+.custom-form .row {
     margin: 20px 0;
 }
 
-#new-reservation-form textarea {
+.custom-form textarea {
     resize: vertical;
 }
 
@@ -192,4 +192,8 @@ input[type="checkbox"].input-validation-error {
 
 .validation-summary-valid {
     display: none;
+}
+
+.form-horizontal .control-label {
+    text-align: left;
 }
