--- a/Web/NbuReservationSystem.Web/Views/Account/ForgotPassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ForgotPassword.cshtml
@@ -1,28 +1,36 @@
-﻿@model NbuReservationSystem.Web.ViewModels.Account.ForgotPasswordViewModel
+﻿@using Labels = NbuReservationSystem.Web.App_GlobalResources.Account.AccountLabels
+@model NbuReservationSystem.Web.ViewModels.Account.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = Labels.ForgottenPassword;
 }
 
-<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<div class="container">
+    <div class="row">
+        <div class="col-md-28">
+
+            <h2 class="text-center">@Labels.ForgottenPassword</h2>
+            <hr />
+
+            @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" class="btn btn-default" value="@Labels.Submit" />
+                    </div>
+                </div>
+            }
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
