--- a/Web/NbuReservationSystem.Web/Views/Manage/ChangePassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Manage/ChangePassword.cshtml
@@ -1,49 +1,75 @@
-﻿@model NbuReservationSystem.Web.ViewModels.Manage.ChangePasswordViewModel
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
+@model NbuReservationSystem.Web.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
 
-<h2>@ViewBag.Title.</h2>
-@{
-    if (this.ViewBag.PasswordChangeSuccess != null && this.ViewBag.PasswordChangeSuccess)
+<div class="container">
+    <div class="row">
+        <div class="col-md-28">
+            <h2 class="text-center">@ViewBag.Title</h2>
+            <hr />
+        </div>
+    </div>
+    @if (this.ViewBag.PasswordChangeSuccess != null && this.ViewBag.PasswordChangeSuccess)
     {
-        <p class="alert alert-success" role="alert">The password was change successfully</p>
+        <div class="row">
+            <div class="col-md-28">
+                <p class="alert alert-success" role="alert">The password was change successfully</p>
+            </div>
+        </div>
     }
     else
     {
-        using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            <h4>Change Password Form</h4>
-            <hr />
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Change password" class="btn btn-default" />
-                </div>
-            </div>
-        }
-    }
-}
+        <div class="row">
+            <div class="col-md-28">
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                @Html.ValidationSummary(true)
+
+                @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form", @class = "custom-form" }))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.OldPassword, AccountLabels.Password, new { @class = "control-label col-md-5" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.OldPassword)
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.NewPassword, AccountLabels.NewPassword, new { @class = "control-label col-md-5" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.NewPassword)
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.ConfirmPassword, AccountLabels.ConfirmPassword, new { @class = "control-label col-md-5" })
+                            <div class="col-md-10">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(x => x.ConfirmPassword)
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="form-group">
+                            <div class="col-md-offset-5 col-md-10">
+                                <input type="reset" value="@Resources.Buttons.Clear" class="btn btn-default"/>
+                                <input type="submit" value="@Resources.Buttons.Submit" class="btn btn-default"/>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    }
+</div>
