--- a/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
@@ -15,44 +15,89 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-        @*TODO: download these images!*@
+
         <div class="item active">
-            <img src="http://www.nbu.bg/files/za-nbu/slidove-purva/dsc-0056.png" alt="Chania">
+            <img src="~/Content/Images/slider1.png">
         </div>
 
         <div class="item">
-            <img src="http://www.nbu.bg/files/nbu-files/slidove-nbu/dsc-0032.png" alt="Chania">
+            <img src="~/Content/Images/slider2.png">
         </div>
 
         <div class="item">
-            <img src="http://www.nbu.bg/files/nbu-files/slidove-nbu/dsc-0044.png" alt="Chania">
+            <img src="~/Content/Images/slider3.png">
         </div>
 
         <div class="item">
-            <img src="http://www.nbu.bg/files/nbu-files/slidove-nbu/dsc-0038.png" alt="Chania">
+            <img src="~/Content/Images/slider4.png">
         </div>
     </div>
 </div>
 
-
 <div class="container">
     <div class="row">
         <div class="col-md-28">
-            <div class="page-header text-center">
-                <h1>Carl - Система за онлайн резервация на зали в НБУ</h1>
+            <div id="title-container" class="page-header text-center">
+                <h1>Система за онлайн резервация на зали в НБУ</h1>
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div id="project-overview" class="col-md-16">
-            <p><span class="glyphicon glyphicon-ok green-ok" aria-hidden="true"></span> <span>Резервиване на зала</span></p>
-            <p><span class="glyphicon glyphicon-ok green-ok" aria-hidden="true"></span> <span>Е-майл известие</span></p>
-            <p><span class="glyphicon glyphicon-ok green-ok" aria-hidden="true"></span> <span>Отказване на резервация</span></p>
-            <p><span class="glyphicon glyphicon-ok green-ok" aria-hidden="true"></span> <span>Преглед на резервациите по ден</span></p>
-            <p><span class="glyphicon glyphicon-ok green-ok" aria-hidden="true"></span> <span>Преглед на резервациите по седмица</span></p>
-            <p><span class="glyphicon glyphicon-ok green-ok" aria-hidden="true"></span> <span>Преглед на резервациите по месец</span></p>
+        <div class="col-md-14">
+            <div class="content-boxes">
+                <span class="glyphicon glyphicon-floppy-save"></span>
+                <h3>@Resources.IndexContent.RegisterFastAndEasy</h3>
+                <p>@Resources.IndexContent.RegisterFastAndEasyTxt</p>
+            </div>
         </div>
-        <div class="col-md-12 center-block"><img id="home-calendar" src="http://www.aokautereschool.net/Parentsandcarers/Calendar/files/stacks-image-085b3fa.png" alt="calendar" class="center-block" /></div>
+        <div class="col-md-14">
+            <div class="content-boxes">
+                <span class="glyphicon glyphicon-edit"></span>
+                <h3>@Resources.IndexContent.ChangeReservation</h3>
+                <p>@Resources.IndexContent.ChangeReservationTxt</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-14">
+            <div class="content-boxes">
+                <span class="glyphicon glyphicon-envelope"></span>
+                <h3>@Resources.IndexContent.ReceiveOurConfirmation</h3>
+                <p>@Resources.IndexContent.ReceiveOurConfirmationTxt</p>
+            </div>
+        </div>
+        <div class="col-md-14">
+            <div class="content-boxes">
+                <span class="glyphicon glyphicon-calendar"></span>
+                <h3>@Resources.IndexContent.PreviewDayAndMonth</h3>
+                <p>@Resources.IndexContent.PreviewDayAndMonthTxt</p>
+            </div>
+        </div>
+    </div>
+    <hr />
+</div>
+
+<div id="grey-container" class="container-fluid">
+    <div id="bg-color-grey">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="~/Content/Images/laptop-tablet-phone-pc1.png" class="img-responsive">
+            </div>
+            <div class="col-md-14">
+                <br><br><br>
+                <div class="headline-left margin-bottom-30">
+                    <h2>@Resources.IndexContent.WhyCARL</h2>
+                </div>
+                <ul class="list-unstyled lists-v2 margin-bottom-30">
+                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.BeTheFirstToMakeReservation</li>
+                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.StayInformed</li>
+                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.PcAndMobileSupport</li>
+                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.PlanEvents</li>
+                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.ReservationHalls</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
+
