Adjusted the pc/tablet/phone picture on the index page

--- a/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
@@ -81,7 +81,7 @@
 <div id="grey-container" class="container-fluid">
     <div id="bg-color-grey">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-10 col-md-offset-4" >
                 <img src="~/Content/Images/laptop-tablet-phone-pc1.png" class="img-responsive">
             </div>
             <div class="col-md-14">
