--- a/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
@@ -85,17 +85,17 @@
                 <img src="~/Content/Images/laptop-tablet-phone-pc1.png" class="img-responsive">
             </div>
             <div class="col-md-14">
-                <br><br><br>
-                <div class="headline-left margin-bottom-30">
-                    <h2>@Resources.IndexContent.WhyCARL</h2>
+                <br />
+                <div>
+                    <h2 id="trust-carl">@Resources.IndexContent.WhyCARL</h2>
+                    <ul>
+                        <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.BeTheFirstToMakeReservation</li>
+                        <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.StayInformed</li>
+                        <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.PcAndMobileSupport</li>
+                        <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.PlanEvents</li>
+                        <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.ReservationHalls</li>
+                    </ul>
                 </div>
-                <ul class="list-unstyled lists-v2 margin-bottom-30">
-                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.BeTheFirstToMakeReservation</li>
-                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.StayInformed</li>
-                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.PcAndMobileSupport</li>
-                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.PlanEvents</li>
-                    <li><span class="glyphicon glyphicon-ok green-ok"></span>@Resources.IndexContent.ReservationHalls</li>
-                </ul>
             </div>
         </div>
     </div>
