Fixed compilation issues

--- a/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿@using Resources = NbuReservationSystem.Web.App_GlobalResources.Home;
+
+@{
     ViewBag.Title = "Home Page";
 }
-
-@*TODO: this page also needs localization!*@
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
